# Arcade-Epitech

./: CMakeLists.txt  README.md  UML_StarUML.mdj  clear.sh  compile.sh
.github/workflows/: Arcade_wokflow.yml
assets/highscores/: menu  pacman  snake
assets/menu/: map.txt
assets/pacman/map/: map.txt
assets/snake/map/: map.txt
docs/: Doxyfile  annotated.html  annotated_dup.js  classes.html  dir_02bbfb1e33f88bbbf612c00e85eb29a8.html  dir_02bbfb1e33f88bbbf612c00e85eb29a8.js  dir_0964d109c436f5d0cbe6718ecdfac6a6.html  dir_0964d109c436f5d0cbe6718ecdfac6a6.js  dir_09e761304027c904456130627fd4dcf5.html  dir_09e761304027c904456130627fd4dcf5.js  dir_0ae03f2c4ed03d4fabfd52007a135e48.html  dir_0ae03f2c4ed03d4fabfd52007a135e48.js  dir_2e14f495647d67885f05900e7f8ba48d.html  dir_2e14f495647d67885f05900e7f8ba48d.js  dir_358719138bd733a589f2c5f2c3b9796f.html  dir_358719138bd733a589f2c5f2c3b9796f.js  dir_37c72a2382a9f76faed5f580d7865094.html  dir_37c72a2382a9f76faed5f580d7865094.js  dir_4f50a462a09c87c4335fb6fc9a06db0e.html  dir_4f50a462a09c87c4335fb6fc9a06db0e.js  dir_5d8940b376a91babd01d2cd4dd8268eb.html  dir_5d8940b376a91babd01d2cd4dd8268eb.js  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba.js  dir_97aefd0d527b934f1d99a682da8fe6a9.html  dir_97aefd0d527b934f1d99a682da8fe6a9.js  dir_9a35864cd4143d39979746a232e7d8d7.html  dir_9a35864cd4143d39979746a232e7d8d7.js  dir_9d02b555d18135a2ddcd812934fa3271.html  dir_9d02b555d18135a2ddcd812934fa3271.js  dir_a065c5f60305fee3569f887679366939.html  dir_a065c5f60305fee3569f887679366939.js  dir_b61163fcfc1c7557713cfec58882c9a3.html  dir_b61163fcfc1c7557713cfec58882c9a3.js  dir_b6c019080825f37b0b9b7b4fb28f0919.html  dir_b6c019080825f37b0b9b7b4fb28f0919.js  dir_b9a7edf0c75b9d02f7f35a639314d76b.html  dir_b9a7edf0c75b9d02f7f35a639314d76b.js  dir_beb65e2ca47b0dc45f865a4b51f70744.html  dir_beb65e2ca47b0dc45f865a4b51f70744.js  (+70 more)
docs/d0/d29/: Pacgum_8cpp.html  Pacgum_8cpp_source.html
docs/d0/d30/: md_README.html
docs/d0/d57/: classarcade_1_1Ghost.html  classarcade_1_1Ghost.js  classarcade_1_1Ghost_a0aefa43c72379771c87b62ec3257294d.html  classarcade_1_1Ghost_a0d1a94991a5197277351815a72d2101f.html  classarcade_1_1Ghost_a11be161c5b1211241d737f811b530a59.html  classarcade_1_1Ghost_a503f317c20bed619890c9d34b632199d.html  classarcade_1_1Ghost_a51403d1dc7600ba82ebc0ef04dd484b7.html  classarcade_1_1Ghost_a5d708ddf9b8947b6e129dfda7b8b150b.html  classarcade_1_1Ghost_a61f5c1b0dc132a25ab0e5fee50db9059.html  classarcade_1_1Ghost_a63d9a486b592beeedb59b231901e7aed.html  classarcade_1_1Ghost_a921940be0b74c27ac27b7574c1a98714.html  classarcade_1_1Ghost_abd43a99569e4b36dbb1083853ab0a6c7.html  classarcade_1_1Ghost_ac644b05af80c4f09d13ea4b946ac5355.html  classarcade_1_1Ghost_adcd103f28527c11315f5d9b71469721b.html  classarcade_1_1Ghost_afbf34816e8940d956e027a4e4b3ee7ff.html
docs/d0/d66/: classarcade_1_1AEntity.html  classarcade_1_1AEntity.js  classarcade_1_1AEntity_a0c360cdeaa05c8abebeb88405615bda8.html  classarcade_1_1AEntity_a0c3dc9c3ae175265085d0b6d3d625066.html  classarcade_1_1AEntity_a1dd128b017c88f02bf8230461f90b0fb.html  classarcade_1_1AEntity_a1f3d4082b8f84fa4847729c3a7508968.html  classarcade_1_1AEntity_a3d64910c90537576e9b5b833238452b2.html  classarcade_1_1AEntity_a4a66ce9d8e7052fc09f2291a02b62566.html  classarcade_1_1AEntity_a4dbd69c7a6bfba183c4c6c0f3fcf877a.html  classarcade_1_1AEntity_a58288bef1fcbfd25688477ac7a422c6a.html  classarcade_1_1AEntity_a81da45cfee0c3d47fa52621a447279d3.html  classarcade_1_1AEntity_a874fcb1873287772b36457f4ab708c75.html  classarcade_1_1AEntity_aab8d8fdfd6069e3b8d8e2ab680f77623.html  classarcade_1_1AEntity_ab339f7a649e750a9481ea4f216f21f7e.html  classarcade_1_1AEntity_ad16f6a464df63837e49ddbf8184965bf.html  classarcade_1_1AEntity_ad233dd8593fe8889f9b0b5bb3f19f8c1.html  classarcade_1_1AEntity_adf7268b1aae4037f993688470923f206.html
docs/d0/d8d/: classarcade_1_1AGame.html  classarcade_1_1AGame.js  classarcade_1_1AGame_a01e00db8429dfdbd7c1d2cc7bc8952e6.html  classarcade_1_1AGame_a2ab3d142c297272107ebcfca1730e522.html  classarcade_1_1AGame_a30cc145ef22c6e8b839262b99de4d164.html  classarcade_1_1AGame_a36b4641b16cffb0ef9e130fe65eb82f3.html  classarcade_1_1AGame_a3f1ec3bc8e2dcc3d8823add61a72a715.html  classarcade_1_1AGame_a59f38138a48c1034453ada5feb1e2044.html  classarcade_1_1AGame_a5a22fec0446d11240c18edc4dfc262cb.html  classarcade_1_1AGame_a5b8ea02e27c3441c3b3436f580f703e8.html  (+13 more)
docs/d0/dc2/: AGraphic_8cpp.html  (+1 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  defines_0.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  (+42 more)
includes/: Core.hpp  DLManager.hpp
includes/common/: AEntity.hpp  AEvent.hpp  AException.hpp
includes/display/: IDisplayModule.hpp
includes/game/: IGameModule.hpp
lib/: CMakeLists.txt
lib/includes/games/: AGame.hpp
lib/includes/games/Menu/: GameMenu.hpp
lib/includes/games/Pacman/: GamePacman.hpp  Ghost.hpp  Pacgum.hpp  Player.hpp  Teleporter.hpp  Wall.hpp
lib/includes/games/Snake/: Apple.hpp  GameSnake.hpp  Snake.hpp
lib/includes/graphics/: AGraphic.hpp
lib/includes/graphics/SDL2/: GraphicSDL2.hpp
lib/includes/graphics/SFML/: GraphicSFML.hpp
lib/includes/graphics/nCurses/: GraphicNCurses.hpp
lib/src/games/: AGame.cpp
lib/src/games/Menu/: GameMenu.cpp
lib/src/games/Pacman/: GamePacman.cpp  Ghost.cpp  Pacgum.cpp  Player.cpp  Teleporter.cpp  Wall.cpp
lib/src/games/Snake/: Apple.cpp  GameSnake.cpp  Snake.cpp
lib/src/graphics/: AGraphic.cpp
lib/src/graphics/SDL2/: GraphicSDL2.cpp
lib/src/graphics/SFML/: GraphicSFML.cpp
lib/src/graphics/nCurses/: GraphicNCurses.cpp
src/: Core.cpp  DLManager.cpp  main.cpp
src/common/: AEntity.cpp  AEvent.cpp  AException.cpp
(+341 files in other folders)
